--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/strings.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Csound for Android 6.09.0beta</string>
+    <string name="app_name">Csound for Android 6.10.0</string>
     <string name="slider1">slider1</string>
     <string name="slider2">slider2</string>
     <string name="slider3">slider3</string>
