--- a/CsoundForAndroid/Silence/app/src/main/res/values/strings.xml
+++ b/CsoundForAndroid/Silence/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Silence</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
 </resources>
