Increased sliders/added messages in Widgets tab for Csound app.

--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/strings.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="slider3">slider3</string>
     <string name="slider4">slider4</string>
     <string name="slider5">slider5</string>
+    <string name="slider6">slider6</string>
+    <string name="slider7">slider7</string>
+    <string name="slider8">slider8</string>
+    <string name="slider9">slider9</string>
     <string name="butt1">butt1</string>
     <string name="butt2">butt2</string>
     <string name="butt3">butt3</string>
